--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Home Page for Marcin Nowicki aka Pr0d1r2.
+Home Page for Jakub Gorzelak (goozzik).
 
 Created for better googleability and self-promotion.
